hphp/test/zend/bad/ext-spl/spl_heap_extract_parameter_error.php
<?php

class TestHeap extends SplHeap {

  function compare() {
    print "This shouldn't be printed";
  }
}

$testHeap = new TestHeap();



var_dump($testHeap->extract('test'));

?>
===DONE===